--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <head>  
 	<title>MineSweeper by  Pablo</title>
+	<!-- Jogo Feito Por Pablo Silva Meu Facebook: https://www.facebook.com/pablorsiilva -->
 	<link rel="stylesheet" type="text/css" href="minesweeper.css">
 </head>
 <body onload="GameController.createGame(LEVEL_EASY)">
@@ -27,5 +28,6 @@
 	</div>
 </body>
 <script src="minesweeper.js" type="text/javascript"></script>
+<!-- Jogo Feito Por Pablo Silva Meu Facebook: https://www.facebook.com/pablorsiilva -->
 
 </html>
